correct the search box width to solve "Advance Search" no text wrap

--- a/common/common.scss
+++ b/common/common.scss
@@ -35,6 +35,7 @@ html.home-search-banner, body[class*=" category-"].category:not(.archetype-regul
             .search-input {
                 background-color: var(--secondary);
                 input#search-term {
+                    width: auto; /* Binjan; 2023.11.23; correct the search box width to solve "Advance Search" no text wrap */
                     min-height: 46px;
                     margin-left: 30px !important;
                     padding-left: 5px;
